[package]
name = "table_tennis"
version = "0.1.0"
authors = ["sivertjoe <sivert-joh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite="0.24.1"
actix-web = "3.1.0"
elo  = "0.3.0"
itertools = "0.9.0"
serde="*"
