[package]
name = "table_tennis"
version = "0.1.0"
authors = ["sivertjoe <sivert-joh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.3" }
actix-cors= "0.5.0"
actix-files = "0.5.0"
elo  = "0.3.0"
sha2 = "0.9.2"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
serde_json = "1.0.59"
serde_derive = "1.0.117"
serde = "1.0.117"
lazy_static = "1.4.0"
regex = "1.4.3"
server = { path = "server" }
server_core = { path = "server_core" }
base64 = "0.13.0"

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]
