[package]
name = "server"
version = "0.1.0"
authors = ["sivertjoe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elo  = "0.3.0"
sha2 = "0.9.2"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
serde_json = "1.0.59"
serde_derive = "1.0.117"
serde = "1.0.117"
lazy_static = "1.4.0"
regex = "1.4.3"
rusqlite = { version = "0.24.1", features = ["bundled"] }
server_core = { path = "../server_core" }
server_macro= { path = "../server_macro" }
rand = "0.8.3"
