[package]
name = "server_macro"
version = "0.1.0"
authors = ["sivertjoe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
server_core = { path = "../server_core" }
syn = "1.0.60"
rusqlite = "0.24.2"
quote = "1.0"
proc-macro2 = "1.0"
